--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -14,7 +14,7 @@ That’s why we’ve acted: **with Open WebUI v0.6.6+ (April 2025), our license 
 In plain terms:  
 - **Open WebUI is still free, open source, and permissively licensed.**
 - **You can still use, modify, and redistribute it for any purpose—just don’t remove or alter our branding unless you meet one of three clear criteria (see below).**
-- **The original BSD-3 license continues to apply for all contributions before v0.6.6.**
+- **The original BSD-3 license continues to apply for all contributions made to the codebase up to and including release v0.6.5.**
 
 We remain committed to transparency, openness, and supporting everyone—from hobbyists to enterprise. This is a “semi-copyleft” measure: we protect just the branding, to keep the project honest and sustainable; everything else is as free as you expect from open-source BSD.
 
@@ -35,8 +35,8 @@ Open WebUI’s license is now:
     2. **You are a contributor**, and have gotten written permission from us;
     3. **You’ve secured an enterprise license** from us which explicitly allows branding changes.
 
-- **All code submitted/merged before 0.6.6 remains BSD-3 licensed** (no branding requirement applies for that legacy code).
-- **CLA required for new contributions** after v0.6.6 under the updated license.
+- **All code submitted/merged to the codebase up to and including release v0.6.5 remains BSD-3 licensed** (no branding requirement applies for that legacy code).
+- **CLA required for new contributions** after v0.6.5 (v0.6.6+) under the updated license.
 
 This is not legal advice—refer to the full [LICENSE](https://github.com/open-webui/open-webui/blob/main/LICENSE) for exact language.
 
@@ -59,8 +59,7 @@ If you remove or modify branding without meeting these criteria, that’s a mate
 
 ### **3. Aren’t these clauses contradictory? BSD-3 says you can’t use your name to promote forks, but also requires branding?!**
 
-**Good question!**  
-Our branding requirement means you **mayn’t falsely promote** your fork as “endorsed by” or “officially part of” Open WebUI (BSD-3-Clause, section 3)—but it *must* still acknowledge its origins for transparency.
+**Good question!** Our branding requirement means you **mayn’t falsely promote** your fork as “endorsed by” or “officially part of” Open WebUI (BSD-3-Clause, section 3)—but it *must* still acknowledge its origins for transparency.
 
 - **You must keep “Open WebUI” branding visible (unless you qualify as detailed above).**
 - **You must clarify (in your documentation/about/landing) that it’s a fork, not the official version.**
