--- a/docs/enterprise.mdx
+++ b/docs/enterprise.mdx
@@ -42,7 +42,7 @@ We **exclusively** work with companies serious about leveraging AI at scale:
 - **100+ seats?** We provide **dedicated, bespoke solutions** for transformational impact.  
 - **Close to 50 seats?** If you need advanced features, **reach out—we may still be able to accommodate you.**  
 
-However, if your team is **under 50 seats** and **budget-conscious or looking for an economical solution**, we strongly recommend using our **open-source version** with **community support**. Our enterprise offering is for **organizations that understand the value of premium AI solutions and are ready to invest accordingly**.  
+However, if your team is **under 50 seats** and **budget-conscious or looking for an economical solution**, we strongly recommend using our **community version** with **community support**. Our enterprise offering is for **organizations that understand the value of premium AI solutions and are ready to invest accordingly**.  
 
 **For smaller teams:** A **self-serve licensing option** is launching by **end of Q2**, bringing customization and select enterprise features to companies of all sizes. **Stay tuned!**  
 
