--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -91,7 +91,7 @@ Let’s be clear:
 - **Importantly, it also incentivizes individuals and organizations to actively contribute back to Open WebUI.** When companies are required to credit and retain the original branding, it creates a virtuous cycle: they’re far more likely to participate in the project, propose improvements, submit bug fixes, contribute features, or start a conversation about open collaboration for everyone’s benefit.  
 - This collective approach **ensures that enhancements, security fixes, and new features are shared more openly, accelerating progress for the entire ecosystem—rather than being siloed in closed forks nobody else benefits from.**
 
-We want Open WebUI to remain **free, empowering, and driven by honest spirit—protecting the project so it can serve everyone, not just those looking to exploit others’ effort for unearned gain.** The **branding protection clause targets only those edge-case exploiters**—no one else’s experience is affected. It is our genuine attempt to keep our open-source community healthy, sustainable, and welcoming, while holding the project’s identity safe from predatory appropriation.
+We want Open WebUI to remain **free, empowering, and driven by honest spirit—protecting the project so it can serve everyone, not just those looking to exploit others’ effort for unearned gain.** The **branding protection clause targets only those edge-case exploiters**—no one else’s experience is affected. It is our genuine attempt to keep our community healthy, sustainable, and welcoming, while holding the project’s identity safe from predatory appropriation.
 
 We’re not interested in “locking down” Open WebUI. If we have to revisit the license again, we’ll do it only if truly forced by an escalation of abuse—something we hope won’t happen, because our commitment remains with the wider community.
 
