--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -105,7 +105,38 @@ If you contributed legacy code and now want it out (don’t want it covered by n
 
 ### **6. Does this mean Open WebUI is “no longer open source”?**
 
-**No, not at all.** Our code is fully public, the BSD-3-Clause freedom remains, and forks/contributions are always welcome. Our branding clause is a limited, semi-copyleft protection that only restricts misleading stripping of project identity. **It’s still vastly more open (and less restrictive) than most commercial “open core” models.**
+It's a great—and complicated—question, because **"open source" can mean many different things to many people**.
+
+If we're being precise:  
+- According to the strict definition laid out by organizations like the [Open Source Initiative (OSI)](https://opensource.org/osd), *any* license restriction that dictates branding or limits how you present derivatives **technically** means the software is no longer "OSI open source."  
+- There are similar, nuanced discussions in the wider community: for instance, the Debian Free Software Guidelines, Fedora’s stance, and others, **all differ somewhat in interpretation**.
+
+So:  
+- **In the narrowest, most “by-the-book” sense—our new branding clause means Open WebUI v0.6.6+ isn’t OSI-certified "open source.”**
+    - Example: The OSI would not certify licenses that require you to keep original branding.
+- However, compared to what most people mean in practice — **“is the code available, can I use it, fork it, change it, build things with it, and not pay you or get a special key?”** — the answer is still a resounding **yes**.
+    - We are far more open than most so-called “open core” commercial/AGPL/SSPL models, which often wall off features, require payments for APIs, or keep critical work private.
+
+**What does all this mean in practice for you?**  
+- *All of the source code is public and developed in the open.*
+- *You can use it, run it locally, build on it, host it for your team or business, and even charge for access—as long as you follow the simple, clearly-scoped branding condition. (And if that’s an issue, email us! There’s a path for everyone.)*
+- *If you want to fork, extend, or submit PRs, the process and permissions are as open as ever—no “private enterprise fork” that fractures the community or walls off features.*
+
+**Why this approach?**  
+Some projects in our position have responded to exploitation by:  
+- Going fully closed-source,
+- Putting new features in a private “enterprise” fork nobody else can see,
+- Switching to restrictive licenses like SSPL or BSL that block nearly all serious commercial use.
+
+**We didn’t want to do that.**  
+We want a single, shared, public codebase where everyone—from solo hackers to enterprises—can benefit from the same core improvements, transparent development, and community fixes.
+
+**To sum up:**  
+- *Strictly speaking*, our license after v0.6.6 isn’t “open source” according to OSI’s official rules.
+- *Practically speaking*, it remains radically more open, transparent, and community-driven than most commercial “source-available” projects.
+- **Our goal is to maximize freedom, fairness, and sustainability—for everyone.**
+
+We believe open ecosystems work best for users, contributors, and the future of AI. If you ever need more permissions or have questions, just talk to us—we’re committed to finding solutions that respect our contributors and community.
 
 ### **7. What if I want to white-label or deeply customize Open WebUI for my enterprise?**
 
