--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -99,9 +99,32 @@ We remain as open, reasonable, and fair as ever—and we trust the community to 
 
 ### **5. I’m a real contributor. Do these restrictions limit my rights?**
 
-**No.** If your code was merged/included before v0.6.6, your rights/freedoms under BSD-3 are unchanged. If you want to contribute today, the BSD-3 basis remains, but you agree (via our CLA) to follow the fair-use branding provision (with more flexibility as a contributor).
+**No, and here’s precisely how it works:**
 
-If you contributed legacy code and now want it out (don’t want it covered by new branding requirement), we’ll **promptly remove it at your request** per the license.
+- **All code contributed and merged up to and including v0.6.5 remains under the original BSD-3-Clause license—no new limitations apply.**  
+  - _This means:_ If you contributed anything before v0.6.6, you (and everyone else) retain all the original BSD-3 freedoms: use, modification, redistribution, even sublicensing—**as long as the original BSD-3 license notice remains intact. The BSD-3 license remains in effect for the entire codebase up to and including v0.6.5.**
+  - **BSD-3-Clause is one of the most permissive licenses available:** You can use the code for any purpose, even commercially, change it completely, and license your derivative under whatever terms you like, as long as you preserve the BSD-3 notice and don't use the original project's name to promote your modifications.
+
+- **The new “fair-use branding” clause only applies to code contributed after v0.6.5 and released as part of v0.6.6 or later,** _and only if you sign the new CLA as part of contributing new material_.
+
+- Looking at the history of [contributors to Open WebUI](https://github.com/open-webui/open-webui/graphs/contributors), **at least 90% of the codebase (very conservatively) originates directly from our core team**. Even community pull requests that are merged are always _manually reviewed, edited, heavily reworked, and improved_ to meet our standards before being included. Nothing is “blind-merged.”
+
+- **We are not, and will not, attempt to “relicense” or change the terms of code we (the core team) released as pure BSD-3 before v0.6.6.** You and all users retain all classic BSD-3 rights over this legacy code.
+
+- **If you contributed code pre-v0.6.6 and now wish to have it removed (i.e., you do not consent to the updated project structure or licensing), we will promptly honor your request and excise it from subsequent releases.** Just contact us and reference the relevant code.
+
+- **If you do not like the direction the project takes or disagree with the new license terms, you are always free to fork or build upon the codebase as it existed at v0.6.5 or earlier.** Version 0.6.5 (and anything before it) remains under the original, unmodified BSD-3-Clause, giving you full flexibility to start your own fork, modify, or redistribute as you see fit under terms allowed by BSD-3.
+
+#### **Summary for contributors:**
+
+- **Contributions committed up to v0.6.5 are BSD-3 only:** Full flexibility, full BSD-3 freedom. You can fork, relicense, rebrand your own code—anything allowed by BSD-3, provided you retain our BSD notice.
+- **From v0.6.6 onward,** if you choose to contribute, you will agree (via CLA) to the new license terms, which include the branding protection clause for *new* contributions.
+- **Legacy code you contributed remains governed by BSD-3—no changes, no retroactive restrictions.**
+- **Complete flexibility to fork:** If you ever need or want to take the project in another direction without the new branding clause, use v0.6.5 or earlier as your starting point—it’s entirely your right under BSD-3.
+
+If in doubt, or if you have concerns about your past or future contributions, please reach out—we value every contributor and are committed to respecting your rights.
+
+**Note:** BSD-3 output/forks have **maximum flexibility**: as long as you keep the original BSD-3 notice, you can even apply your own license terms on top of your modifications or distribute them however you wish.
 
 ### **6. Does this mean Open WebUI is “no longer open source”?**
 
