--- a/docs/license.mdx
+++ b/docs/license.mdx
@@ -103,13 +103,14 @@ We remain as open, reasonable, and fair as ever—and we trust the community to 
 
 - **All code contributed and merged up to and including v0.6.5 remains under the original BSD-3-Clause license—no new limitations apply.**  
   - _This means:_ If you contributed anything before v0.6.6, you (and everyone else) retain all the original BSD-3 freedoms: use, modification, redistribution, even sublicensing—**as long as the original BSD-3 license notice remains intact. The BSD-3 license remains in effect for the entire codebase up to and including v0.6.5.**
-  - **BSD-3-Clause is one of the most permissive licenses available:** You can use the code for any purpose, even commercially, change it completely, and license your derivative under whatever terms you like, as long as you preserve the BSD-3 notice and don't use the original project's name to promote your modifications.
+  - **BSD-3-Clause is one of the most permissive licenses available:** You can use the code for any purpose, even commercially, change it completely, and license your derivative under whatever terms you like, as long as you preserve the BSD-3 notice.
 
 - **The new “fair-use branding” clause only applies to code contributed after v0.6.5 and released as part of v0.6.6 or later,** _and only if you sign the new CLA as part of contributing new material_.
 
-- Looking at the history of [contributors to Open WebUI](https://github.com/open-webui/open-webui/graphs/contributors), **at least 90% of the codebase (very conservatively) originates directly from our core team**. Even community pull requests that are merged are always _manually reviewed, edited, heavily reworked, and improved_ to meet our standards before being included. Nothing is “blind-merged.”
+- **Importantly:** The new license with the branding protection clause is **not being retroactively applied to the entire codebase**. It is only applied to the portion of the code that we (the core team) ourselves wrote (which, with a conservative estimate, is at least 80% of the code up to v0.6.5), and everything going forward starting with v0.6.6.  
+  - All external/community-contributed code merged before v0.6.6 remains pure BSD-3 and is not covered by the branding clause—**no retroactive relicensing or constraints** will be applied to anyone else’s past contributions.
 
-- **We are not, and will not, attempt to “relicense” or change the terms of code we (the core team) released as pure BSD-3 before v0.6.6.** You and all users retain all classic BSD-3 rights over this legacy code.
+- Looking at the history of [contributors to Open WebUI](https://github.com/open-webui/open-webui/graphs/contributors), **at least 80% of the codebase (very conservatively) originates directly from our core team**. Even community pull requests that are merged are always _manually reviewed, edited, heavily reworked, and improved_ to meet our standards before being included. Nothing is “blind-merged.”
 
 - **If you contributed code pre-v0.6.6 and now wish to have it removed (i.e., you do not consent to the updated project structure or licensing), we will promptly honor your request and excise it from subsequent releases.** Just contact us and reference the relevant code.
 
