--- a/docs/openapi-servers/faq.mdx
+++ b/docs/openapi-servers/faq.mdx
@@ -42,6 +42,7 @@ To work securely in production over HTTPS, your OpenAPI servers must also be ser
 - Go with Swag or Echo
 
 The key is to ensure your server exposes a valid OpenAPI schema, and that it communicates over HTTP(S).
+It is important to set a custom operationId for all endpoints.
 
 ---
 
