new: move valve to its own section
Currently, the tabs-shared folder mechanism seems broken: the valve
documentation does not appear on the website. Additionaly, valves are
relevant to tools too.

Signed-off-by: thiswillbeyourgithub <26625900+thiswillbeyourgithub@users.noreply.github.com>

--- a/docs/features/plugin/valves/index.mdx
+++ b/docs/features/plugin/valves/index.mdx
@@ -1,8 +1,14 @@
-## Shared Function Components
+---
+sidebar_position: 3
+title: "🔄 Valves & UserValves"
+---
 
-### Valves and UserValves - (optional, but HIGHLY encouraged)
+## Valves & UserValves
 
-Valves and UserValves are used to allow users to provide dynamic details such as an API key or a configuration option. These will create a fillable field or a bool switch in the GUI menu for the given function.
+
+Valves and UserValves are used to allow users to provide dynamic details such as an API key or a configuration option. These will create a fillable field or a bool switch in the GUI menu for the given function. They are always optional, but HIGHLY encouraged.
+
+Hence, Valves and UserValves class can be defined in either a `Pipe`, `Pipeline`, `Filter` or `Tools` class.
 
 Valves are configurable by admins alone via the Tools or Functions menus. On the other hand UserValves are configurable by any users directly from a chat session.
 
