--- a/docs/features/plugin/valves/index.mdx
+++ b/docs/features/plugin/valves/index.mdx
@@ -14,7 +14,8 @@ Valves are configurable by admins alone via the Tools or Functions menus. On the
 <details>
 <summary>Commented example</summary>
 
-```
+```python
+
 from pydantic import BaseModel, Field
 from typing import Literal
 
