--- a/docs/features/plugin/tools/development.mdx
+++ b/docs/features/plugin/tools/development.mdx
@@ -64,7 +64,7 @@ Below is a list of optional arguments your tools can depend on:
 - `__metadata__`: Dictionary with chat metadata
 - `__messages__`: List of previous messages
 - `__files__`: Attached files
-- `__model__`: Model name
+- `__model__`: A dictionary with model information
 
 Just add them as argument to any method of your Tool class just like `__user__` in the example above.
 
