fix: more missing syntax colouring
Signed-off-by: thiswillbeyourgithub <26625900+thiswillbeyourgithub@users.noreply.github.com>

--- a/docs/features/plugin/functions/action.mdx
+++ b/docs/features/plugin/functions/action.mdx
@@ -27,7 +27,7 @@ Actions have a single main component called an action function. This component t
 <details>
 <summary>Example</summary>
 
-```
+```python
 async def action(
         self,
         body: dict,
