--- a/docs/pipelines/index.mdx
+++ b/docs/pipelines/index.mdx
@@ -20,7 +20,7 @@ import { TopBanners } from "@site/src/components/TopBanners";
 # Pipelines: UI-Agnostic OpenAI API Plugin Framework
 
 :::warning
-**DO NOT USE PIPELINES!**
+**DO NOT USE PIPELINES IF!**
 
 If your goal is simply to add support for additional providers like Anthropic or basic filters, you likely don't need Pipelines . For those cases, Open WebUI Functions are a better fit—it's built-in, much more convenient, and easier to configure. Pipelines, however, comes into play when you're dealing with computationally heavy tasks (e.g., running large models or complex logic) that you want to offload from your main Open WebUI instance for better performance and scalability.
 :::
