--- a/docs/features/plugin/valves/index.mdx
+++ b/docs/features/plugin/valves/index.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 3
-title: "🔄 Valves & UserValves"
+title: "🔄 Valves"
 ---
 
-## Valves & UserValves
+## Valves
 
 Valves and UserValves are used to allow users to provide dynamic details such as an API key or a configuration option. These will create a fillable field or a bool switch in the GUI menu for the given function. They are always optional, but HIGHLY encouraged.
 
